# HistAug-PLISM

./: .gitignore  CLAUDE.md  Dockerfile  TODO.md  histaug_virchow2_augmentor.py  pathobench-results.md  plism_organ_loc.csv  presentation_outline.md  pyproject.toml  scanner_transfer_inference.py
docs/: SCORPION_dataset.md  h5_image_pairing.md  logged_metrics.md
src/histaug/: train.py
src/histaug/config/: CycleGAN_virchow2_all_pairs.yaml  CycleGAN_virchow2_limited.yaml  CycleGAN_virchow2_limited_advRamp.yaml  CycleGAN_virchow2_limited_stabilized.yaml  CycleGAN_virchow2_limited_warmInit.yaml  Histaug_h0mini.yaml  Histaug_h0mini_conditioned.yaml  Histaug_h0mini_prefeatures.yaml  Histaug_h0mini_prefeatures_bottleneck_tgt_no_HR.yaml  Histaug_h0mini_prefeatures_overfit.yaml  Histaug_h0mini_prefeatures_tgt.yaml  Histaug_h0mini_unconditioned.yaml  Histaug_phikon_conditioned.yaml  Histaug_phikon_prefeatures.yaml  Histaug_phikon_prefeatures_bottleneck_tgt.yaml  Histaug_phikon_prefeatures_overfit.yaml  Histaug_phikon_prefeatures_tgt.yaml  Histaug_phikon_unconditioned.yaml  Histaug_scanner_transfer.yaml  Histaug_virchow2_prefeatures_bottleneck_tgt.yaml  Histaug_virchow2_prefeatures_bottleneck_tgt_no_HR.yaml  Histaug_virchow2_prefeatures_tgt.yaml  sweep_histaug_multiaug.yaml
src/histaug/cyclegan_features/: __init__.py  config.py  data.py  inference.py  losses.py  models.py  prepare_data.py  train.py  utils.py
src/histaug/datasets/: data_interface.py  plism_aug_jpeg_dataset.py  plism_jpeg_dataset.py  plism_pair_jpeg_dataset.py  (+3 more)
tests/: test_plism_pair_prefeatures_dataset.py
(+21 files in other folders)
